--- a/AI/chatGPT/portfolio_Ai.html
+++ b/AI/chatGPT/portfolio_Ai.html
@@ -3,21 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>페이지 소개</title>
-        <link rel="stylesheet" href="css/style.css">
+        <title>AI</title>
+        <link rel="stylesheet" href="../../css/style.css">
         <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     </head>
     <body>
-        <!--모달 팝업-->
-        <div class="modal">
-            <div class="modal_popup">
-                <h3>비밀번호를 입력하세요</h3>
-                <input type="text" id="password">
-                <p><button type="button" class="btnBack">돌아가기</button>
-                <button type="button" id="btnOk">확인</button></p>
-            </div>
-        </div>
-        <!--모달 팝업 끝-->
         <header>
             <li class="ham-btn">
                 <a class="menu-trigger" href="#">
@@ -33,7 +23,7 @@
             <div class="ham-menu mt-5">
                 <ul class="ham-sub-menu">
                     <a href="main2.html"><li>홈</li></a>
-                    <a href="#" class="modal_btn"><li>AI</li></a>
+                    <a href="AI/chatGPT/portfolio_Ai.html"><li>AI</li></a>
                 </ul>
             </div>
             <div class="toggle">
@@ -45,10 +35,10 @@
         </div>
         <main>
             <section>
-                <h2>안녕하세요!</h2>
-                <p>사이트 소개입니다</p>
+                <h2>나의 프로젝트</h2>
+                <p>Ai 딥러닝 프로젝트</p>
             </section>
         </main>
-        <script src="js/script.js"></script>
+        <script src="../../js/script.js"></script>
     </body>
 </html>
