--- a/AI/chatGPT/portfolio_Ai.html
+++ b/AI/chatGPT/portfolio_Ai.html
@@ -22,7 +22,7 @@
         <div class="ham-con">
             <div class="ham-menu mt-5">
                 <ul class="ham-sub-menu">
-                    <a href="main2.html"><li>홈</li></a>
+                    <a href="main.html"><li>홈</li></a>
                     <a href="AI/chatGPT/portfolio_Ai.html"><li>AI</li></a>
                 </ul>
             </div>
