--- a/main.html
+++ b/main.html
@@ -3,40 +3,52 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>사이트 소개</title>
+        <title>페이지 소개</title>
         <link rel="stylesheet" href="css/style.css">
-        <script type="text/javascript" src="script/script.js"></script>
+        <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     </head>
     <body>
-        <header>
-            <h1>사이트 소개</h1>
-            <nav>
-                <!--햄버거버튼-->
-                <a class="menu-trigger" href="#">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </a>
-                <ul>
-                    <li><a href="index.html">홈</a></li>
-                    <li><a href="profile.html">프로필</a></li>
-                </ul>
-            </nav>
-            <div class="ham-con">
-                <div id="ham-menu-warp">
-                    <ul class="ham-manu mt-5">
-                        <li><a href="/AI/chatGPT/">AI</a></li>
-                    </ul>
-                </div>
+        <!--모달 팝업-->
+        <div class="modal">
+            <div class="modal_popup">
+                <h3>비밀번호를 입력하세요</h3>
+                <input type="text" id="password">
+                <p><button type="button" class="btnBack">돌아가기</button>
+                <button type="button" id="btnOk">확인</button></p>
             </div>
+        </div>
+        <!--모달 팝업 끝-->
+        <header>
+            <li class="ham-btn">
+                <a class="menu-trigger" href="#">
+                  <span></span>
+                  <span></span>
+                  <span></span>
+                </a>
+            </li>
+            <h1>페이지 소개</h1>
         </header>
+        <!--사이드바 내용-->
+        <div class="ham-con">
+            <div class="ham-menu mt-5">
+                <ul class="ham-sub-menu">
+                    <a href="main.html"><li>홈</li></a>
+                    <a href="#" class="modal_btn"><li>AI</li></a>
+                </ul>
+            </div>
+            <div class="toggle">
+                <input type="checkbox" id="toggle" hidden>
+                <label for="toggle" class="toggleSwitch">
+                    <span class="toggleButton"></span>
+                </label>
+            </div>
+        </div>
         <main>
             <section>
-                
                 <h2>안녕하세요!</h2>
-                <p>저의 홈페이지에 오신 것을 환영합니다.</p>
-                <img src="images/profile.jpg" alt="프로필 사진" style="width:200px">
+                <p>사이트 소개입니다</p>
             </section>
         </main>
+        <script src="js/script.js"></script>
     </body>
 </html>
